# rs

./: .vercelignore  package-lock.json  package.json  pyproject.toml  pyproject.toml.bak  requirements-full.txt  requirements.txt  vercel.json
app/: main.py
app/api/routers/: auth.py  feedback.py  resume.py
app/core/: config.py  security.py
app/database/models/: feedback.py  resume.py  user.py
app/database/repositories/: base_repo.py  feedback_repository.py  resume_repository.py  user_repository.py
app/services/ai/: ats_scoring.py  cover_letter_generator.py  model_ai.py  resume_enrichment.py
app/static/: manifest.json  sw.js
app/static/js/: script.js
app/templates/: 404.html  admin.html  base.html  build_resume.html  college_detail.html  cover_letter.html  create.html  dashboard.html  index.html  login.html  profile.html  register.html  resume_optimize.html  resume_view.html
app/utils/: openrouter_maintenance.py  token_tracker.py
app/web/: core.py
